@@ -10,6 +10,8 @@ vX.Y.Z (YYYY-MM-DD)
 - Add -g flag to build script to specify whether flat files need to be
   generated for any database loading that is not streaming data
 - mysql: refactor script flags for handling socket path to match MySQL binaries
+- build: add --mysql-stored-procedures to specify location of MySQL stored
+  procedures
 
 v0.61.4 (2024-08-12)
 
